--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
     "@nuxtjs/auth": "^4.0.0-rc.3",
     "@nuxtjs/axios": "^5.0.1",
     "@nuxtjs/toast": "^2.3.3",
+    "chart.js": "^2.7.1",
+    "vue-chartjs": "^3.1.0",
     "@riophae/vue-treeselect": "0.0.37",
     "body-parser": "^1.18.2",
     "bootstrap-vue": "^2.0.0-rc.1",
